--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,10 +49,12 @@ classifiers = [
 [tool.poetry.dependencies]
 python = '^3.8.1'
 pyautogui = '^0.9.54'
+pygetwindow = '^0.0.9'
 
 
 [tool.poetry.group.dev.dependencies]
 mypy = '^1.3.0'
+types-PyAutoGUI = '^0.9.3.6'
 
 
 [tool.poetry.group.linters]
