--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,6 +48,7 @@ classifiers = [
 
 [tool.poetry.dependencies]
 python = '^3.8.1'
+opencv-python = '^4.7.0.72'
 pyautogui = '^0.9.54'
 pygetwindow = '^0.0.9'
 
@@ -138,6 +139,7 @@ select = [
 ]
 ignore = [
     'PLR0913',  # Too many arguments
+    'S311',  # Use of random
 ]
 ignore-init-module-imports = true
 line-length = 120
